<resources>
    <string name="app_name">Confession</string>
    <string name="app_name_uppercase">CONFESSION</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_in_uppercase">SIGN IN</string>

    <string name="sign_up">Sign Up</string>
    <string name="sign_up_uppercase">SIGN UP</string>

    <string name="log_out">Logout</string>
    <string name="log_out_uppercase">LOGOUT</string>

    <string name="user_id_demo">User#1111</string>
    <string name="group">Group</string>
    <string name="post_content_hint">
        <font size="28">
            What do you think?
        </font>
    </string>

    <string name="username">Username</string>
    <string name="username_msg">
        <p><b>___username </b>Ghé nhà mình xem Sneakers chất lượng giá siêu hạt dẻ nha.</p>
    </string>
    <string name="username_demo">___username</string>
    <string name="username_uppercase">USERNAME</string>
    <string name="description">description</string>

    <string name="phone">Phone</string>
    <string name="phone_uppercase">PHONE</string>

    <string name="password">Password</string>
    <string name="password_uppercase">PASSWORD</string>
    <string name="email">Email</string>
    <string name="email_uppercase">EMAIL</string>
    <string name="conf_password">Confirm Password</string>
    <string name="conf_password_uppercase">CONFIRM PASSWORD</string>

    <string name="forgot_pass_question">Forgot Password?</string>

    <string name="title_activity_sign_up">activity_sign_up</string>
    <string name="fb_login">Sign In with Facebook</string>
    <string name="google_login">Sign In with Google</string>

    <string name="forgot_your_pass">Forgot your password?</string>
    <string name="forgot_ypass_1">Enter your registered email below </string>
    <string name="forgot_ypass_2">to receive password reset instruction</string>
    <string name="remember_password">Remember password?</string>
    <string name="email_send_noti">Email has been sent!</string>
    <string name="email_send_m1">Please check your inbox and click in the</string>
    <string name="email_send_m2">received link to reset your password</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed finibus metus sit amet est malesuada, a iaculis purus dictum. Quisque porttitor eros at risus rutrum, sed sollicitudin urna congue. Nulla vel arcu diam. Pellentesque sit amet leo ac nulla gravida venenatis consectetur ut mi. Nam elit ante, faucibus nec dapibus non, ornare eu libero. Mauris eleifend ipsum eu purus suscipit lacinia. Nulla facilisi. Suspendisse potenti. Nulla et est sit amet quam ultricies consectetur id a mi. Phasellus et euismod nunc.</string>


    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_post">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>