<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bg_gradient_vert"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".views.activities.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center_vertical"
        android:layout_weight="5"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/nunito_extra_bold"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name_uppercase"
            android:textColor="@color/white"
            android:textSize="36sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:background="@drawable/custom_bg_shadow"
        android:outlineAmbientShadowColor="@color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:fontFamily="@font/nunito_bold"
                android:gravity="center_horizontal|bottom"
                android:text="@string/forgot_your_pass"
                android:textColor="@color/main_theme"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/forgot_ypass_1"
                    android:textColor="#A4A4A4"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/forgot_ypass_2"
                    android:textColor="#A4A4A4"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:baselineAligned="false"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="6"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:contentDescription="sent email"
                        android:src="@drawable/img_undraw_letter_re_8m03_1" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:theme="@style/EditTextLabel"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp"
                        app:hintEnabled="false"
                        app:startIconDrawable="@drawable/custom_email_icon">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fp_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/custom_edit_text"
                            android:fontFamily="@font/nunito_regular"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"

                            />
                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/fp_button"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/custom_bg_btn"
                        android:fontFamily="@font/nunito_regular"
                        android:text="Send"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom|center_horizontal"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/nunito_regular"
                            android:paddingStart="5dp"
                            android:paddingEnd="0dp"
                            android:text="@string/remember_password"

                            android:textColor="@color/black"
                            android:textSize="16sp"

                            />

                        <TextView
                            android:id="@+id/txt_si_click"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"

                            android:clickable="true"

                            android:fontFamily="@font/nunito_bold"
                            android:onClick="onClick"
                            android:paddingStart="5dp"
                            android:paddingEnd="0dp"
                            android:text="@string/sign_in"
                            android:textAlignment="center"
                            android:textColor="@color/main_theme"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</LinearLayout>