<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bg_shadow"
    tools:context=".views.fragments.ForgotPasswordSuccessFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:weightSum="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center_horizontal|bottom"
            android:textColor="@color/main_theme"
            android:textSize="24sp"
            android:text="@string/email_send_noti"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/email_send_m1"
                android:textColor="#A4A4A4"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_regular"
                android:gravity="center_horizontal|center_vertical"
                android:textColor="#A4A4A4"
                android:textSize="16sp"
                android:text="@string/email_send_m2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:baselineAligned="false"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="6"
                >



                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_undraw_mail_sent_re_0ofv_1"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="50dp"/>


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/fp_si_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/custom_bg_btn"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="false"
                    />




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginBottom="10dp"
                        android:fontFamily="@font/nunito_regular"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:text="Don't receive the link?"

                        android:textColor="@color/black"
                        android:textSize="16sp"

                        />

                    <TextView
                        android:id="@+id/txt_resend_click"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"

                        android:clickable="true"

                        android:fontFamily="@font/nunito_bold"
                        android:onClick="onClick"
                        android:paddingStart="5dp"
                        android:paddingEnd="0dp"
                        android:text="Resend"
                        android:textAlignment="center"
                        android:textColor="@color/main_theme"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</FrameLayout>